--- a/sideprojects/survey/survey.html
+++ b/sideprojects/survey/survey.html
@@ -6,39 +6,68 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>Registration Form</h1>
-    <p>Please fill out this form with the required information</p>
-    <form method="post" action='https://register-demo.freecodecamp.org'>
-      <fieldset>
-        <label for="first-name">Enter Your First Name: <input id="first-name" name="first-name" type="text" required /></label>
-        <label for="last-name">Enter Your Last Name: <input id="last-name" name="last-name" type="text" required /></label>
-        <label for="email">Enter Your Email: <input id="email" name="email" type="email" required /></label>
-        <label for="new-password">Create a New Password: <input id="new-password" name="new-password" type="password" pattern="[a-z0-5]{8,}" required /></label>
-      </fieldset>
-      <fieldset>
-        <label for="personal-account"><input id="personal-account" type="radio" name="account-type" class="inline" /> Personal Account</label>
-        <label for="business-account"><input id="business-account" type="radio" name="account-type" class="inline" /> Business Account</label>
-        <label for="terms-and-conditions">
-          <input id="terms-and-conditions" type="checkbox" required name="terms-and-conditions" class="inline" /> I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a>
-        </label>
-      </fieldset>
-      <fieldset>
-        <label for="profile-picture">Upload a profile picture: <input id="profile-picture" type="file" name="file" /></label>
-        <label for="age">Input your age (years): <input id="age" type="number" name="age" min="13" max="120" /></label>
-        <label for="referrer">How did you hear about us?
-          <select id="referrer" name="referrer">
-            <option value="">(select one)</option>
-            <option value="1">freeCodeCamp News</option>
-            <option value="2">freeCodeCamp YouTube Channel</option>
-            <option value="3">freeCodeCamp Forum</option>
-            <option value="4">Other</option>
-          </select>
-        </label>
-        <label for="bio">Provide a bio:
-          <textarea id="bio" name="bio" rows="3" cols="30" placeholder="I like coding on the beach..."></textarea>
-        </label>
-      </fieldset>
-      <input type="submit" value="Submit" />
-    </form>
-  </body>
-</html>
+    <h1 id="title">freeCodeCamp Survey Form</h1>
+    <p id="description">Thank you for taking the time to help us improve the platform</p>
+<form  id="survey-form">
+  <fieldset>
+<div class="input-element">
+      <label id="name-label" for="name">Name <input id="name" type="text" placeholder="Enter your name" required></label>
+ </div>
+ <div class="input-element">
+      <label id="email-label" for="email">Email <input id="email" type="email" placeholder="Enter your Email" required></label>
+</div>
+<div class="input-element">
+<label id="number-label" for="number">Age (optional) <input id="number" type="number" min="8" max="99" placeholder="Age">
+</label>
+</div>
+<div class="input-element">
+ <label for="dropdown">Which option best describes your current role?
+     <select id="dropdown">
+        <option selected disabled> Select current role</option>
+        <option value="1">Student</option>
+        <option value="2">Full Time Job</option>
+        <option value="3">Full Time Learner</option>
+        <option value="4">Prefer not to say</option>
+        <option value="5">Other</option>
+      </select>
+      </label>
+</div>
+<div class="input-element">
+      Would you recommend freeCodeCamp to a friend?
+      <label for="definitely"><input type="radio" name="answer" value="value" id="definitely">Definitely</label>
+      <label for="maybe"><input type="radio" name="answer" value="value" id="maybe">Maybe</label>
+     <label for="notsure"><input type="radio" name="answer" id="notsure" value="value">Not sure</label>
+     </div>
+     <div class="input-element">
+      What is your favorite feature of freeCodeCamp?
+      <select id="dropdown2">
+        <option selected disabled> Select an option</option>
+        <option value="6">Challenges</option>
+        <option value="7">Projects</option>
+        <option value="8">Community</option>
+        <option value="9">Open Source</option>
+      </select>
+      </div>
+      <div class="input-element">
+      What would you like to see improved? (Check all that apply)
+      <input type="checkbox" value="value">Front-end Projects
+      <input type="checkbox" value="value">Back-end Projects
+      <input type="checkbox" value="value">Data Visualization
+      <input type="checkbox" value="value">Challenges
+      <input type="checkbox" value="value">Open Source Community
+      <input type="checkbox" value="value">Gitter help rooms
+      <input type="checkbox" value="value">Videos
+      <input type="checkbox" value="value">City Meetups
+      <input type="checkbox" value="value">Wiki
+      <input type="checkbox" value="value">Forum
+      <input type="checkbox" value="value">Additional Courses
+      </div>
+      <div class="input-element">
+      Any comments or suggestions?
+      <textarea placeholder="Enter your comment here..."></textarea>
+      </div>
+      <div class="input-element">
+        <input type="submit" id="submit">
+        </div>
+  </fieldset>
+</form>
